; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_init.c_format_common_name.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_init.c_format_common_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.context = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.gc_arena = type { i32 }
%struct.buffer = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c"[%s] \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @format_common_name(%struct.context* %0, %struct.gc_arena* %1) #0 {
  %3 = alloca %struct.context*, align 8
  %4 = alloca %struct.gc_arena*, align 8
  %5 = alloca %struct.buffer, align 4
  store %struct.context* %0, %struct.context** %3, align 8
  store %struct.gc_arena* %1, %struct.gc_arena** %4, align 8
  %6 = load %struct.gc_arena*, %struct.gc_arena** %4, align 8
  %7 = call i32 @alloc_buf_gc(i32 256, %struct.gc_arena* %6)
  %8 = getelementptr inbounds %struct.buffer, %struct.buffer* %5, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = load %struct.context*, %struct.context** %3, align 8
  %10 = getelementptr inbounds %struct.context, %struct.context* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %21

14:                                               ; preds = %2
  %15 = load %struct.context*, %struct.context** %3, align 8
  %16 = getelementptr inbounds %struct.context, %struct.context* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = call i32 @tls_common_name(i64 %18, i32 0)
  %20 = call i32 @buf_printf(%struct.buffer* %5, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %19)
  br label %21

21:                                               ; preds = %14, %2
  %22 = call i8* @BSTR(%struct.buffer* %5)
  ret i8* %22
}

declare dso_local i32 @alloc_buf_gc(i32, %struct.gc_arena*) #1

declare dso_local i32 @buf_printf(%struct.buffer*, i8*, i32) #1

declare dso_local i32 @tls_common_name(i64, i32) #1

declare dso_local i8* @BSTR(%struct.buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
